v.2.4.1 Добавляем кнопку PWA для андроида

--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -53,10 +53,7 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="manifest" href="manifest.json">
-  <script
-  type="module"
-  src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"
-></script> 
+   
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous">
@@ -99,7 +96,6 @@
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
-        <pwa-install></pwa-install>
         <a href="#popupwindows" class="button-subscriptions">WINDOWS</a>
         <div class="botton-subscribtions-descriotions">Нажмите, чтобы установить приложение на WINDOWS</div>
         <a href="#popupandroid" class="button-subscriptions">ANDROID</a>
@@ -199,8 +195,9 @@
         <p style="margin: 0px; padding: 0; font-size: 18px; font-weight: 600; text-align: left;">ШАГ 1: СКОПИРУЙТЕ ЭТУ ССЫЛКУ</p>
         <div readonly class="js-copy-target">https://www.medisi.one/pagesfordevices/android/</div>
         <div class="input-email-descriptions">Приложение будет установлено через ваш браузер CHROME и окажется на рабочем столе вашего устройства уже через несколько секунд. 
-          Регистрация и кредитная карта не потребуется.</div>
+          Регистрация и кредитная карта не потребуется. Если вы сейчас находитесь в браузере CHROME, то просто нажмите эту ссылку <a href="https://www.medisi.one/pagesfordevices/android/" target="_self"></a> </div>
         <button class="js-copy-btn copy-button">СКОПИРОВАТЬ</button>
+
         <div class="input-email-bottomline"></div>
 
         <p style="margin: 0px; padding: 0; font-size: 18px; font-weight: 600; text-align: left;">ШАГ 2: ОТКРОЙТЕ БРАУЗЕР CHROME</p>
