v.2.4.2 Добавляем кнопку PWA для андроида

--- a/frontend_1/pagesfordevices/android/index.html
+++ b/frontend_1/pagesfordevices/android/index.html
@@ -625,7 +625,7 @@
     </div>
   </div>
   <script type="module">
-    import 'pwa-install.js';
+    import './pwa-install.js';
   </script>
   <script>
     if ('serviceWorker' in navigator) {
