v.2.4.5 Добавляем кнопку PWA для андроида

--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -716,9 +716,9 @@
     </div>
   </div> -->
   <script src="app.js">
-    
+
   </script>
-  script type="module">
+  <script type="module">
     import './pwa-install.js';
   </script>
   <script src="linkCopy.js"></script>
