v.2.4.9 Добавляем кнопку PWA для андроида

--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <!-- Кнопка Установить PWA -->
-      <pwa-install></pwa-install>
+      <!-- <pwa-install></pwa-install> -->
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
@@ -141,7 +141,7 @@
       <!-- Заголовок -->
       <h1>Medisi</h1>
       <p>Медитация - это путь к новым горизонтам вашего сознания</p>
-      
+
       <div class="footer">
         <div class="footer-box">
           <div class="footer-name">MediSi</div>
