v.2.4.9 Добавляем кнопку PWA для андроида

--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <!-- Кнопка Установить PWA -->
-      <!-- <pwa-install></pwa-install> -->
+      <pwa-install></pwa-install>
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
@@ -513,9 +513,6 @@
                 9.1.Вопрсы и предложения по повод настоящей Политики следует сообщать в службу поддержки
                 пользователей –
                 inna42009@yandex.ru
-
-
-
               </div>
             </article>
           </div>
@@ -715,15 +712,10 @@
         </p>
       </div> 
     </div>
-  </div> -->
+  </div> 
   <script src="app.js"></script>
-  <!-- <script async defer>
-    var installComponent = document.createElement("pwa-install");
-    document.body.appendChild(installComponent);
-    installComponent.getInstalledStatus();
-  </script> -->
+  
   <script src="linkCopy.js"></script>
-  <script type="module" src="./pwa-install.js"></script>
 
   <!-- <script>
     const host = "https://medisi.one";
