--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -53,9 +53,7 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="manifest" href="manifest.json">
-  <script
-    type="module"
-    src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"
+  <script type="module" src="./pwa-install.js"
   ></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
@@ -151,7 +149,7 @@
             <ion-icon name="logo-android"></ion-icon>
             <ion-icon name="logo-windows"></ion-icon>
           </div>
-          <div class="footer-sweety">TRY®SWEETY 2021 v.2.4.10</div>
+          <div class="footer-sweety">TRY®SWEETY 2021 v.2.4.11</div>
         </div>
       </div>
     </div>
