--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -95,7 +95,12 @@
       </div>
 
       <!-- Кнопка Установить PWA -->
-      <pwa-install installbuttontext="Установить"></pwa-install>
+      <pwa-install 
+      installbuttontext="УСТАНОВИТЬ"
+      cancelbuttontext="ОТМЕНИТЬ"
+      featuresheader="АВТОРСКИЕ МЕДИТАЦИИ ИРИНЫ СПИЦИНОЙ"
+      descriptionheader="ОПИСАНИЕ"
+      ></pwa-install>
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
@@ -148,7 +153,7 @@
             <ion-icon name="logo-android"></ion-icon>
             <ion-icon name="logo-windows"></ion-icon>
           </div>
-          <div class="footer-sweety">TRY®SWEETY 2021 v.2.4.14</div>
+          <div class="footer-sweety">TRY®SWEETY 2021 v.2.4.15</div>
         </div>
       </div>
     </div>
