--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -97,10 +97,12 @@
       <!-- Кнопка Установить PWA -->
       <pwa-install 
       installbuttontext="УСТАНОВИТЬ"
-      cancelbuttontext="ОТМЕНИТЬ"
-      featuresheader="АВТОРСКИЕ МЕДИТАЦИИ ИРИНЫ СПИЦИНОЙ"
-      descriptionheader="ОПИСАНИЕ"
       ></pwa-install>
+
+      
+      <!-- cancelbuttontext="ОТМЕНИТЬ"
+      featuresheader="АВТОРСКИЕ МЕДИТАЦИИ ИРИНЫ СПИЦИНОЙ"
+      descriptionheader="ОПИСАНИЕ" -->
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
@@ -153,7 +155,7 @@
             <ion-icon name="logo-android"></ion-icon>
             <ion-icon name="logo-windows"></ion-icon>
           </div>
-          <div class="footer-sweety">TRY®SWEETY 2021 v.2.4.15</div>
+          <div class="footer-sweety">TRY®SWEETY 2021 v.2.4.16</div>
         </div>
       </div>
     </div>
