--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -711,7 +711,10 @@
     </div>
   </div> 
   <script src="app.js"></script>
-  
+  <script async defer>
+    const ref = document.getElementById("installComponent);
+    red.getInstalledStatus();
+  </script>
   <script src="linkCopy.js"></script>
 
   <!-- <script>
