--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -53,7 +53,6 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="manifest" href="manifest.json">
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous">
@@ -93,9 +92,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Кнопка Установить PWA -->
-      <pwa-install installbuttontext="Установить"></pwa-install>
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
@@ -148,7 +144,7 @@
             <ion-icon name="logo-android"></ion-icon>
             <ion-icon name="logo-windows"></ion-icon>
           </div>
-          <div class="footer-sweety">TRY®SWEETY 2021 v.2.4.19</div>
+          <div class="footer-sweety">TRY®SWEETY 2021</div>
         </div>
       </div>
     </div>
