--- a/frontend_1/pagesfordevices/android/index.html
+++ b/frontend_1/pagesfordevices/android/index.html
@@ -53,7 +53,7 @@
   <meta name="theme-color" content="#000000">
 
   <link rel="manifest" href="./manifest.json">
-
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous">
@@ -94,6 +94,10 @@
           </div>
         </div>
       </div>
+      
+
+      <!-- Кнопка Установить PWA -->
+      <pwa-install ></pwa-install>
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
@@ -125,14 +129,11 @@
         </div>
       </div>
       <!-- Заголовок -->
-      <h1>Medisi PWA для ANDROID</h1>
+      <h1>Medisi PWA для ANDROID  v.2.4.20</h1>
       <p>Медитация - это путь к новым горизонтам вашего сознания.
         Используйте регулярно наше прогрессивное вэб приложение для ANDROID,чтобы изменить свою жизнь к лучшему!
       </p>
 
-      <!-- Кнопка Установить PWA -->
-      <pwa-install manifestpath="manifest.json"></pwa-install>
-      
       <!-- Футер -->
       <div class="footer">
         <div class="footer-box">
@@ -624,9 +625,6 @@
       </div> 
     </div>
   </div>
-  <script type="module">
-    import './pwa-install.js';
-  </script>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('./sw.js');
