--- a/frontend_1/pagesfordevices/android/index.html
+++ b/frontend_1/pagesfordevices/android/index.html
@@ -97,7 +97,7 @@
       
 
       <!-- Кнопка Установить PWA -->
-      <pwa-install descriptionheader="ОПИСАНИЕ" ></pwa-install>
+      <pwa-install descriptionheader="ОПИСАНИЕ" installbuttontext="УСТАНОВИТЬ"></pwa-install>
 
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
@@ -129,7 +129,7 @@
         </div>
       </div>
       <!-- Заголовок -->
-      <h1>Medisi PWA для ANDROID  v.2.4.23</h1>
+      <h1>Medisi PWA для ANDROID  v.2.4.24</h1>
       <p>Медитация - это путь к новым горизонтам вашего сознания.
         Используйте регулярно наше прогрессивное вэб приложение для ANDROID,чтобы изменить свою жизнь к лучшему!
       </p>
