--- a/frontend_1/pagesfordevices/android/index.html
+++ b/frontend_1/pagesfordevices/android/index.html
@@ -97,7 +97,7 @@
 
 
       <!-- Кнопка Установить PWA -->
-      <div class="pwa-box">
+      <div class="install-box-for-pwa">
         <pwa-install
           explainer="Это прогрессивное вэб приложение (PWA) можно установить на ваш компьютер или мобильное устройство. Это позволит этому PWA выглядеть и вести себя как любое другое установленное приложение. Вы найдете его в списках приложений и сможете закрепить на главном экране, в меню ПУСК или на панели задач. Для установки не требуется регистрация и кредитная карта."
           featuresheader="ХАРАКТЕРИСТИКИ" descriptionheader="ОПИСАНИЕ" installbuttontext="УСТАНОВИТЬ"
@@ -134,7 +134,7 @@
         </div>
       </div>
       <!-- Заголовок -->
-      <h1>Medisi PWA для ANDROID v.2.4.34</h1>
+      <h1>Medisi PWA для ANDROID v.2.4.35</h1>
       <p>Медитация - это путь к новым горизонтам вашего сознания.
         Используйте регулярно наше прогрессивное вэб приложение для ANDROID,чтобы изменить свою жизнь к лучшему!
       </p>
