--- a/frontend_1/pagesfordevices/android/index.html
+++ b/frontend_1/pagesfordevices/android/index.html
@@ -95,14 +95,6 @@
         </div>
       </div>
 
-
-      <!-- Кнопка Установить PWA -->
-      <div class="install-box-for-pwa">
-        <pwa-install
-          explainer="Это прогрессивное вэб приложение (PWA) можно установить на ваш компьютер или мобильное устройство. Это позволит этому PWA выглядеть и вести себя как любое другое установленное приложение. Вы найдете его в списках приложений и сможете закрепить на главном экране, в меню ПУСК или на панели задач. Для установки не требуется регистрация и кредитная карта."
-          featuresheader="ХАРАКТЕРИСТИКИ" descriptionheader="ОПИСАНИЕ" installbuttontext="УСТАНОВИТЬ"
-          cancelbuttontext="ОТМЕНИТЬ"></pwa-install>
-      </div>
       <!-- Кнопка подписки -->
       <div class="box-button-subscriptions">
         <a href="#popup" class="button-subscriptions">ВАШИ ПОДПИСКИ</a>
@@ -152,6 +144,15 @@
         </div>
       </div>
     </div>
+  </div>
+  
+  <!-- Кнопка Установить PWA -->
+  <div class="install-box-for-pwa">
+    <pwa-install
+      explainer="Это прогрессивное вэб приложение (PWA) можно установить на ваш компьютер или мобильное устройство. Это позволит этому PWA выглядеть и вести себя как любое другое установленное приложение. Вы найдете его в списках приложений и сможете закрепить на главном экране, в меню ПУСК или на панели задач. Для установки не требуется регистрация и кредитная карта."
+      featuresheader="ХАРАКТЕРИСТИКИ" descriptionheader="ОПИСАНИЕ" installbuttontext="УСТАНОВИТЬ"
+      cancelbuttontext="ОТМЕНИТЬ">
+    </pwa-install>
   </div>
 
   <!-- здесь будет ПОПАП а пока поля инпута в хардкоде -->
