--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -52,7 +52,7 @@
 
   <meta name="theme-color" content="#000000">
 
-  <link rel="manifest" href="manifest.json">
+  <!-- <link rel="manifest" href="manifest.json"> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous">
@@ -144,7 +144,7 @@
             <ion-icon name="logo-android"></ion-icon>
             <ion-icon name="logo-windows"></ion-icon>
           </div>
-          <div class="footer-sweety">TRY®SWEETY 2021v40</div>
+          <div class="footer-sweety">TRY®SWEETY 2021v41</div>
         </div>
       </div>
     </div>
@@ -707,12 +707,7 @@
       </div> 
     </div>
   </div> 
-  <script src="app.js"></script>
-  <script async defer>
-    var installComponent = document.createElement("pwa-install");
-    document.body.appendChild(installComponent);
-    installComponent.getInstalledStatus();
-  </script>
+  <!-- <script src="app.js"></script> -->
   <script src="linkCopy.js"></script>
 
   <!-- <script>
