--- a/frontend_1/pagesfordevices/ios/index.html
+++ b/frontend_1/pagesfordevices/ios/index.html
@@ -6,8 +6,8 @@
   <meta name="description" content="Прогрессивное вэб приложение Medisi для ios для медитаций и саморазвития">
   <link rel="stylesheet" href="../../css/index.css">
 
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="no">
+  <meta name="apple-mobile-web-app-capable" content="no">
   <meta name="application-name" content="Medisi">
   <meta name="apple-mobile-web-app-title" content="Medisi">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
