--- a/frontend_1/pagesfordevices/ios/player1.html
+++ b/frontend_1/pagesfordevices/ios/player1.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="mobile-web-app-capable" content="no">
+  <meta name="apple-mobile-web-app-capable" content="no">
     <link rel="icon" href="favicon.png" />
     <title>MediSi Истории PWA для IOS</title>
     <meta name="description" content="Приложение PWA для IOS для прослушивания забавных и поучительных историй">
