--- a/frontend_1/pagesfordevices/ios/index.html
+++ b/frontend_1/pagesfordevices/ios/index.html
@@ -52,7 +52,7 @@
 
   <meta name="theme-color" content="#000000">
 
-
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous">
@@ -142,6 +142,12 @@
           <div class="footer-sweety">TRY®SWEETY 2021</div>
         </div>
       </div>
+    </div>
+    <div class="install-box-for-pwa">
+      <pwa-install
+        explainer="Это прогрессивное вэб приложение (PWA) можно установить на ваш компьютер или мобильное устройство. Это позволит этому PWA выглядеть и вести себя как любое другое установленное приложение. Вы найдете его в списках приложений и сможете закрепить на главном экране, в меню ПУСК или на панели задач. Для установки не требуется регистрация и кредитная карта."
+        featuresheader="ХАРАКТЕРИСТИКИ" descriptionheader="ОПИСАНИЕ" installbuttontext="УСТАНОВИТЬ"
+        cancelbuttontext="ОТМЕНИТЬ"></pwa-install>
     </div>
   </div>
 
