--- a/frontend_1/pagesfordevices/android/index.html
+++ b/frontend_1/pagesfordevices/android/index.html
@@ -114,10 +114,6 @@
             <div class="carousel-card-item-image" style="background-image: URL(../../images/health.jpg)"></div>
             <!-- <div class="carousel-promo-item-title">Сборник медитаций для оздоровления</div> -->
           </div>
-          <!-- <div class="carousel-promo-item">
-                    <div class="carousel-card-item-image" style="background-image: URL(../../images/sleep.jpg); background-position: center;"></div>
-                    <div class="carousel-promo-item-title">Сборник медитаций для релакса и сна</div>
-                  </div> -->
         </div>
       </div>
       <!-- Заголовок -->
@@ -144,7 +140,7 @@
       <pwa-install
         explainer="Это прогрессивное вэб приложение (PWA) можно установить на ваш компьютер или мобильное устройство. Это позволит этому PWA выглядеть и вести себя как любое другое установленное приложение. Вы найдете его в списках приложений и сможете закрепить на главном экране, в меню ПУСК или на панели задач. Для установки не требуется регистрация и кредитная карта."
         featuresheader="ХАРАКТЕРИСТИКИ" descriptionheader="ОПИСАНИЕ" installbuttontext="УСТАНОВИТЬ"
-        cancelbuttontext="ОТМЕНИТЬ"></pwa-install>
+        cancelbuttontext="ОТМЕНИТЬ" iosinstallinfotext=" "></pwa-install>
     </div>
   </div>
 
