--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -219,7 +219,7 @@
         <div class="input-email-descriptions">Приложение будет установлено через ваш браузер Safari и окажется на
           рабочем столе вашего устройства уже через несколько секунд.
           Регистрация и кредитная карта не потребуется. Если вы сейчас находитесь в браузере Safari , нажмите эту
-          ссылку, затем кнопку УСТАНОВИТЬ.</div>
+          ссылку, затем кнопку ИНСТРУКЦИЯ ПО УСТАНОВКЕ НА IPHONES.</div>
         <div class="divice-link"><a href="https://www.medisi.one/pagesfordevices/ios/"
             style="font-size: 12px; color:rgb(23, 23, 196)" target="_self">УСТАНОВИТЬ НА IPHONE или IPAD</a></div>
         <button class="js-copy-btn copy-button">СКОПИРОВАТЬ</button>
@@ -229,7 +229,7 @@
         <br />
         <p style="margin: 0px; padding: 0; font-size: 18px; font-weight: 600; text-align: left;">ШАГ 3: ВСТАВЬТЕ ССЫЛКУ В АДРЕСНУЮ СТРОКУ</p>
         <br />
-        <p style="margin: 0px; padding: 0; font-size: 18px; font-weight: 600; text-align: left;">ШАГ 4: СЛЕДУЙТЕ ДАЛЬНЕЙШЕЙ ИНСТРУКЦИИ</p>
+        <p style="margin: 0px; padding: 0; font-size: 18px; font-weight: 600; text-align: left;">ШАГ 4: ИНСТРУКЦИЯ ВНИЗУ СТРАНИЦЫ</p>
         <br />
         <div class="input-email-bottomline"></div>
       </div>
