--- a/frontend_1/pagesfordevices/ios/index.html
+++ b/frontend_1/pagesfordevices/ios/index.html
@@ -130,12 +130,14 @@
       </p>
      <!-- Инструкция по установке PWA IOS  -->
       <br/>
-      <div class="install-box-for-pwa-ios">
+      <div class="install-box-for-pwa">
+        <div class="install-box-for-pwa-ios"></div>
         <pwa-install
           explainer="Это прогрессивное вэб приложение (PWA) можно установить на ваш компьютер или мобильное устройство. Это позволит этому PWA выглядеть и вести себя как любое другое установленное приложение. Вы найдете его в списках приложений и сможете закрепить на главном экране, в меню ПУСК или на панели задач. Для установки не требуется регистрация и кредитная карта."
           featuresheader="ХАРАКТЕРИСТИКИ" descriptionheader=" " installbuttontext="ИНСТРУКЦИЯ ПО УСТАНОВКЕ ПРИЛОЖЕНИЯ НА IPHONE"
           cancelbuttontext="ОТМЕНИТЬ" iosinstallinfotext="Для установки сначала нажмите ПОДЕЛИТЬСЯ, затем пролистайте экран, найдите и нажмите НА ЭКРАН ДОМОЙ [+]"></pwa-install>
       </div>
+      <div class="install-box-for-pwa-ios"></div>
       <br/>
       <!-- Футер -->
       <div class="footer">
@@ -147,7 +149,7 @@
             <ion-icon name="logo-android"></ion-icon>
             <ion-icon name="logo-windows"></ion-icon>
           </div>
-          <div class="footer-sweety">TRY®SWEETY 2021v49</div>
+          <div class="footer-sweety">TRY®SWEETY 2021v50</div>
         </div>
       </div>
     </div>
