--- a/frontend_1/audioknigi.html
+++ b/frontend_1/audioknigi.html
@@ -392,7 +392,7 @@
 
 
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
     <script src="linkCopy.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 
